syntax = "proto3";

package worker;

import "common.proto";

option go_package = "taskforge/proto/worker";





service WorkerService {

  // Long-lived bidirectional stream
  rpc WorkerStream(stream WorkerMessage)
      returns (stream SchedulerMessage);
}

// ---------- Worker → Scheduler ----------

message WorkerMessage {
  oneof message {
    WorkerHello hello = 1;
    common.ExecutionResult result = 2;
    WorkerHeartbeat heartbeat = 3;
  }
}

message WorkerHello {
  string worker_id = 1;
}

message WorkerHeartbeat {
  string worker_id = 1;
  int32 running_tasks = 2;
}

// ---------- Scheduler → Worker ----------

message SchedulerMessage {
  oneof message {
    common.ExecutionRequest execute = 1;
  }
}
